--- a/Library.Web/Areas/Admin/Views/Book/Add.cshtml
+++ b/Library.Web/Areas/Admin/Views/Book/Add.cshtml
@@ -50,6 +50,11 @@
                 @Html.TextBoxFor(m => m.Ean, new { @class = "form-control add-textbox" })
             </div>
             <div class="form-group">
+                @Html.LabelFor(m => m.Quantity, new { @class = "add-label" })
+                @Html.ValidationMessageFor(m => m.Quantity, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(m => m.Quantity, new { @class = "form-control add-textbox" })
+            </div>
+            <div class="form-group">
                 @Html.LabelFor(m => m.Description, new { @class = "add-label" })
                 @Html.ValidationMessageFor(m => m.Description, "", new { @class = "text-danger" })
                 @Html.TextAreaFor(m => m.Description, new { @class = "form-control description-add-textbox" })
